# Omokai-mission-pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  TESTING.md  entrypoint.sh
src/mission_bringup/: package.xml  setup.cfg  setup.py
src/mission_bringup/config/: gz_bridge.yaml  nav2_default_view.rviz  nav2_params.yaml
src/mission_bringup/launch/: mission_demo.launch.py  test.launch.py
src/mission_bringup/maps/: home.yaml
src/mission_bringup/mission_bringup/: odom_to_tf.py
src/mission_bringup/urdf/: diff_bot.sdf  diff_bot.urdf
src/mission_bringup/worlds/: turtlebot3_house.sdf
src/mission_executor/: package.xml  setup.py
src/mission_executor/mission_executor/: executor_node.py
src/mission_llm/: package.xml  setup.cfg  setup.py
src/mission_llm/mission_llm/: llm_node.py  mission_schema.json  zones.json
src/mission_ui/: package.xml  setup.cfg  setup.py
src/mission_ui/mission_ui/: ui_node.py
