<?xml version="1.0"?>
<package format="3">
  <name>mission_bringup</name>
  <version>0.1.0</version>
  <description>Launch glue: TurtleBot3 sim + SLAM Toolbox + Nav2 + mission pipeline</description>
  <maintainer email="you@example.com">Pavan</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nav2_rviz_plugins</exec_depend>
  <exec_depend>mission_llm</exec_depend>
  <exec_depend>mission_executor</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>