<?xml version="1.0"?>
<package format="3">
  <name>mission_executor</name>
  <version>0.1.0</version>
  <description>Validated mission JSON -> deterministic Nav2 executor</description>
  <maintainer email="you@example.com">Pavan</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf_transformations</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
