<?xml version="1.0"?>
<package format="3">
  <name>mission_llm</name>
  <version>0.1.0</version>
  <description>Prompt -> LLM -> validated mission JSON (guardrail layer)</description>
  <maintainer email="you@example.com">Pavan</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-jsonschema</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
