<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypemirror="xsd"?>
<package format="3">
  <name>mission_ui</name>
  <version>0.1.0</version>
  <description>Single-page browser UI for sending mission prompts and viewing live status. No terminal interaction required after launch.</description>
  <maintainer email="you@example.com">Pavan</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
